# rp2040_cmake_prj

./: .gitignore  LICENSE  README.md
kb2040_led/: CMakeLists.txt
kb2040_led/src/: CMakeLists.txt
kb2040_led/src/ap/: ap.cpp
kb2040_led/src/common/hw/include/: neopixel.hpp  spi.h
kb2040_led/src/hw/: hw.c  hw_def.h
kb2040_led/src/hw/driver/: led.c
kb2040_led/src/lib/pico_neopixels/: Adafruit_NeoPixel.cpp
kb2040_led/tools/: down.py
pico_exam/src/: CMakeLists.txt
pico_exam/src/bsp/: bsp.c  bsp.h
pico_exam/src/hw/: hw.c  hw.h  hw_def.h
pico_exam/src/hw/driver/: uart.c
pico_lcd/: CMakeLists.txt  README.md  down.py  elf2uf2
pico_lcd/src/: CMakeLists.txt
pico_lcd/src/ap/: ap.cpp
pico_lcd/src/hw/: hw.c  hw.h  hw_def.h
pico_lcd/src/hw/driver/: gpio.c  lcd.c  spi.c
pico_lcd/src/hw/driver/lcd/: ili9341.c
pico_lcd/tools/: down.py  picotool  rp2040load
pico_oled/: CMakeLists.txt  README.md
pico_oled/src/: CMakeLists.txt
pico_oled/src/ap/: ap.cpp
pico_oled/src/hw/: hw.c  hw_def.h
pico_oled/src/hw/driver/: i2c.c
pico_oled/tools/: down.py
rp2040_16mb_boot/: CMakeLists.txt  README.md
rp2040_16mb_boot/src/: CMakeLists.txt
rp2040_16mb_boot/src/ap/: ap.cpp  ap_def.h
rp2040_16mb_boot/src/ap/boot/: boot.cpp  boot.h
rp2040_16mb_boot/src/bsp/: bsp.c  bsp.h
rp2040_16mb_boot/src/bsp/board/: rp2040_16mb.h
rp2040_16mb_boot/src/bsp/ldscript/: pico_flash.ld
rp2040_16mb_boot/src/common/: def.h  err_code.h
rp2040_16mb_boot/src/common/core/: util.c  util.h
rp2040_16mb_boot/src/common/hw/include/: cli.h  cmd.h  flash.h  reset.h
rp2040_16mb_boot/src/hw/: hw.c  hw.h  hw_def.h
rp2040_16mb_boot/src/hw/driver/: cmd.c  flash.c  reset.c  spi.c
rp2040_16mb_boot/tools/: down.py
rp2040_16mb_fw/: CMakeLists.txt  README.md
rp2040_16mb_fw/src/: CMakeLists.txt
rp2040_16mb_fw/src/ap/: ap.cpp
rp2040_16mb_fw/src/bsp/: bsp.c  bsp.h
rp2040_16mb_fw/src/bsp/ldscript/: pico_flash.ld
rp2040_16mb_fw/src/common/: def.h
rp2040_16mb_fw/src/common/hw/include/: flash.h  log.h  reset.h
rp2040_16mb_fw/src/hw/: hw.c  hw.h  hw_def.h
rp2040_16mb_fw/src/hw/driver/: cli.c  reset.c
rp2040_16mb_fw/tools/: down.py
rp2040_16mb_fw/tools/mac/: rp2040_loader
